--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   	<section id="glitchcontrols2" class="transparent" data-background="images/glitchControls.jpg">
   	</section>
 
-  	<section id="belojevic" data-background="images/belojevic.jpg"><video data-autoplay src="images/nina.mov"></video>
+  	<section id="belojevic" data-background="images/belojevic.jpg"><video data-autoplay src="https://github.com/jentery/litaud/blob/master/images/nina.mov?raw=true"></video>
   	<small>Image care of Nina Belojevic</small>
   	</section>
 
