--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   	<section id="hyperlit2" class="transparent" data-background="images/designFiction.png">
   	</section>
 
-  	<section id="hyperlit3" data-background="images/designFiction.png"><video data-autoplay src="images/hyperlit.mp4"></video>
+  	<section id="hyperlit3" data-background="images/designFiction.png"><video data-autoplay src="https://github.com/jentery/litaud/blob/master/images/hyperlit.mp4?raw=true"></video>
   	<small>Video care of Nina Belojevic and Jon Johnson</a></small>
   	</section>
 
