--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
   	<h3>Special thanks to Jane Carlin and Jamie Spane for hosting;<br>also to SSHRC + CFI for supporting this research;<br>and to Nina Belojevic, Teddie Brock, Nicole Clouston,<br> Tiffany Chan, Patrick Close, Katherine Goertz, Jon Johnson,<br> Maasa Lebus, Evan Locke, Shaun Macpherson, <br>Danielle Morgan, and Victoria Murawski for contributing<br>to the MLab's research.</h3>
   	</section>
 
+	<section id="references"><h1>Key References</h1>
+    </section>
 
     <section id="mcpherson" data-background="images/mcphersonAlpha.png"><h1>McPherson: In and<br>Through Objects</h1>
     <small>Image care of <a href="http://muse.jhu.edu/journals/cinema_journal/toc/cj.48.2.html" target="_blank"><em>Cinema Journal</em></a> (2009)</small>
